src/app/styles/base/typography.css
/* ... */
/* -------------------------------- *
 * Override/Extend normalize.css    *
 * -------------------------------- */

* {
  font-family: inherit;
  line-height: inherit;
  color: inherit;
}

*,
*::before,
*::after {
  /*
   * Make all elements from the DOM inherit from the parent box-sizing
   * Since `*` has a specificity of 0, it does not override the `html` value
   * making all elements inheriting from the root box-sizing value
   * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
   */
  box-sizing: inherit;
}

/*
 * 1. Change the default font family in all browsers.
 * 2. Setting @viewport causes scrollbars to overlap content in IE11 and Edge, so
 *    we force a non-overlapping, non-auto-hiding scrollbar to counteract.
 * 3. Change the default tap highlight to be completely transparent in iOS.
 */

html {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  font-family: var(--font-family-body); /* sans-serif; /* 1 */
  font-weight: var(--font-weight-normal);
  letter-spacing: var(--letter-spacing);
  -ms-overflow-style: scrollbar; /* 2 */
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* 3 */
}

/*
 * 1. Set an explicit initial text-align value so that we can later use the
 *    the `inherit` value on things like `<th>` elements.
 */
body {
  background-color: var(--page-background-color);
  color: var(--text-color-primary);
  text-align: left; /* 1 */
}

/*
 * IE10+ doesn't honor `<meta name='viewport'>` in some cases
 * See: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
*/
@at-root {
  @-ms-viewport {
    width: device-width;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: var(--font-weight-bold);
  font-family: var(--font-family-heading);
}

b,
dt,
strong {
  font-weight: var(--font-weight-bold);
}

small,
code,
kbd,
samp {
  line-height: inherit;
  vertical-align: bottom;
}

label,
legend,
button,
[type="button"],
[type="reset"],
[type="submit"] {
  font-weight: var(--font-weight-medium);
}

abbr[title] {
  border-bottom: dotted 1px currentColor;
  text-decoration: none;
}

address {
  font-style: normal;
}

blockquote {
  display:block;
  position: relative;
  margin-left: var(--space-m);

  &::before {
    position: absolute;
    left: -14px;
    top: 5px;
    content: "\201C";
    font-size: 2em;
  }

  &::after {
    content: "";
  }
}

hr {
  box-sizing: content-box;
  position: relative;
  border: 0;

  &::after {
    content: '';
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    height: 1px;
    background: #808080;
  }
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

legend,
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
}

img {
  max-width: 100%;
  vertical-align: middle;
  height: auto;

  /* consider using display: block; */
}

/*
 * Avoid 300ms click delay on touch devices that support the `touch-action` CSS property.
 *
 * In particular, unlike most other browsers, IE11+Edge on Windows 10 on touch devices and IE Mobile 10-11
 * DON'T remove the click delay when `<meta name="viewport" content="width=device-width">` is present.
 * However, they DO support removing the click delay via `touch-action: manipulation`.
 * See:
 *   https://getbootstrap.com/docs/4.0/content/reboot/#click-delay-optimization-for-touch
 *   https://caniuse.com/#feat=css-touch-action
 *   https://patrickhlauke.github.io/touch/tests/results/#suppressing-300ms-delay
*/
a,
area,
button,
[role="button"],
[type="button"],
[type="reset"],
[type="submit"],
input:not([type="range"]),
label,
select,
summary,
textarea {
  touch-action: manipulation;
}

/*
 * 1. Textareas should really only resize vertically so they don't break their (horizontal) containers.
 */
textarea {
  resize: vertical; /* 1 */
}

/*
 * 1. Prevent button text from being selectable.
 */
button,
[role="button"],
[type="button"],
[type="reset"],
[type="submit"] {
  cursor: pointer;
  user-select: none; /* 1 */

  &:focus {
    /*
     * Work around a Firefox/IE bug where the transparent `button` background
     * results in a loss of the default `button` focus styles.
     */
    outline: 1px dotted;
    outline: 5px auto -webkit-focus-ring-color;
  }
}

a {
  color: var(--text-color-anchor);
  cursor: pointer;
}

/*
 * Undo styles for placeholder links/named anchors (without href)
 * which have not been made explicitly keyboard-focusable (without tabindex).
 */
a:not([href]):not([tabindex]) {
  color: inherit;
  text-decoration: none;
}

[disabled] {
  cursor: default;
  pointer-events: none;
  color: var(--text-color-disabled);
}

/*
 * Suppress the focus outline on elements that cannot be accessed via keyboard.
 * This prevents an unwanted focus outline from appearing around elements that
 * might still respond to pointer events.
 */

[tabindex^='-']:focus {
  outline: none !important;
}
/* ... */

